--- a/main.html
+++ b/main.html
@@ -3,11 +3,32 @@
 <html>
 
 <head>
+	<title>3 Idiots</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+		<a href="actor" id="nav-actor">Actors</a>
+		<a href="quote" id="nav-quote">Quuotes</a>
+	</nav>
+	<summary>
+		3 Idiots movie is the best movie i have ever seen . in this movie the passoin is showing to study not for degree its shows you skills mattars
+	</summary>
+	<section id="actor">
+		<h2>Amir Khan is the Mr Perfectionist</h2>
+	</section>
+	<section id="qoute">
+		<p>ek mahan gyani baba ne kaha tha succes ke pichhe mat bhago skills ke pichhe bhago kamyabi jahk marke pichhe ayegi</p>
+	</section>
+	<aside>
+		<h3>Ratings: 8.5/10</h3>
+		<p>Release date: 25 December 2009</p>
+	</aside>
+	<footer>
+		<p>Produced by: Vidhu Vinod Chopra</p>
+	</footer>
     <script type="text/javascript" src="./script.js">
 </script>
 
