--- a/main.html
+++ b/main.html
@@ -10,8 +10,8 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<nav>
-		<a href="actor" id="nav-actor">Actors</a>
-		<a href="quote" id="nav-quote">Quuotes</a>
+		<a href="#actor" id="nav-actor">Actors</a>
+		<a href="#quote" id="nav-quote">Quuotes</a>
 	</nav>
 	<summary>
 		3 Idiots movie is the best movie i have ever seen . in this movie the passoin is showing to study not for degree its shows you skills mattars
