--- a/main.html
+++ b/main.html
@@ -9,6 +9,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<header>
+		<h1>3 Idiots</h1>
+	</header>
 	<nav>
 		<a href="#actor" id="nav-actor">Actors</a>
 		<a href="#quote" id="nav-quote">Quuotes</a>
