--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 	<section id="actor">
 		<h2>Amir Khan is the Mr Perfectionist</h2>
 	</section>
-	<section id="qoute">
+	<section id="quote">
 		<p>ek mahan gyani baba ne kaha tha succes ke pichhe mat bhago skills ke pichhe bhago kamyabi jahk marke pichhe ayegi</p>
 	</section>
 	<aside>
